# rust-basics

./: Cargo.toml  README.md  others.txt
about_match/: Cargo.toml
about_match/src/: lib.rs
basics/src/: data_types.rs  functions.rs  lib.rs  variable.rs
collections/src/: lib.rs
enums/src/: lib.rs  options.rs
error_handling/src/: lib.rs
generics/src/: lib.rs
lifetimes/src/: lib.rs
ownership/src/: lib.rs  mutable_reference.rs  ownershipBasics.rs  ownership_basics.rs  references.rs  slice.rs
src/: main.rs
structs/src/: lib.rs
traits/src/: default.rs  lib.rs  trait_bound.rs
