[package]
name = "rustbasics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basics = { path = "./basics"}
enums = { path = "./enums"}
error_handling = { path = "./error_handling"}
ownership = { path = "./ownership"}
structs = { path = "./structs"}
collections = {path = "./collections" }
about_match = {path = "./about_match" }